added burgers to index

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,6 +4,9 @@
 <ul>
     {{#each burgers}}
     {{#unless devoured}}
+    <li>
+        {{burger_name}}
+    </li>
     {{/unless}}
     {{/each}}
 </ul>
