--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,14 @@
 <ul>
     {{#each burgers}}
     {{#unless devoured}}
-    <li>
-        {{burger_name}}
-    </li>
+    <form action="burger/eat/{{id}}" method="POST">
+    <div class="input-group">
+    <li class="form-control">{{burger_name}}</li>
+    <button class="btn btn-sucess" type="submit">Devour dis burger!</button>
+    </div>
+    </form>
+
+
     {{/unless}}
     {{/each}}
 </ul>
