added heroku shark database

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {{!-- Link to Bootstrap CDN --}}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    {{!-- Link to CSS file --}}
+    <link rel="stylesheet" href="../../public/assets/css/burger_style.css">
     <title>Eat Da Burger</title>
 </head>
 <body>
