added static information to access CSS

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     {{!-- Link to Bootstrap CDN --}}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     {{!-- Link to CSS file --}}
-    <link rel="stylesheet" href="../../public/assets/css/burger_style.css">
+    <link rel="stylesheet" href="assets/css/burger_style.css">
     <title>Eat Da Burger</title>
 </head>
 <body>
